# ai4science

./: .gitignore  README.md  learning-log.md
.claude-plugin/: marketplace.json
materialhack/: README.md
orbital/: README.md
touchstone/: .gitignore  README.md  pyproject.toml
touchstone/.claude-plugin/: plugin.json
touchstone/commands/: verify-binder.md
touchstone/docs/: boltzgen-metal-design.md  metal-selectivity.md
touchstone/docs/experiments/: 2026-07-01-rlvr-boltzgen-round1.md  2026-07-07-metalhawk-ood-designed-sites.md  2026-07-13-geometry-prior-wrong-domain.md  2026-07-13-mlip-cannot-rank-metals.md  2026-07-14-selectivity-from-occupancy.md  2026-07-17-bond-valence-wrong-domain.md
touchstone/docs/specs/: 2026-06-24-touchstone-design.md  2026-06-26-mlip-and-structural-verifier-design.md  2026-06-27-touchstone-verifier-stack.md  2026-06-28-rlvr-boltzgen.md  2026-06-30-mlip-uq-trust-layer.md  2026-07-12-cu-rlvr-selectivity.md  2026-07-17-rfd2-vs-boltzgen-cu.md
touchstone/examples/: run_poc.py  run_rfaa.py
touchstone/examples/materialhack/: run_poc.py  run_rfaa.py
touchstone/scripts/: allmetal3d_crosscheck.py  alphafold3_crosscheck.py  boltz_crosscheck.py  boltzgen_scores.py  build_bond_valence_params.py  build_bvs_fixture.py  build_csd_reference.py  build_metalpdb_precedents.py  build_metalpdb_reference.py  build_pdb_reference.py  build_real_site_fixture.py  chai_crosscheck.py  designs_to_fasta.py  expression_score.py  extract_cluster.py  log_stack_wandb.py  log_wandb.py  md_coordination.py  metalhawk_score.py  rfd2_cu_design.sh  rlvr_select.py  thermostability_score.py  wandb_stack_eval.py  winners_to_targets.py
touchstone/skills/verify-metal-binder/: SKILL.md
touchstone/src/touchstone/: __init__.py  boltzgen.py  cli.py  cofold.py  core.py  expression.py  generators.py  mcp_server.py  pipeline.py  reward.py  service.py  thermostability.py  tracking.py
touchstone/src/touchstone/data/: bond_valence_params.json  metalpdb_precedents.json  metalpdb_reference.json  pdb_reference.json
touchstone/src/touchstone/geometry/: bond_valence.py  conformer.py  coordination.py  metalhawk.py  mogul.py  ood.py  parse.py  precedent.py  reference.py  verifier.py
touchstone/src/touchstone/physics/: __init__.py  mlip.py  selectivity.py  trs.py
touchstone/tests/: test_benchmark.py  test_bond_valence.py  test_cascade.py  test_cli.py  test_cofold.py  test_conformer.py  test_coordination.py  test_core.py  test_expression.py  test_geometry.py  test_mlip.py  test_mogul.py  test_parse.py  test_precedent.py  test_reward.py  test_selectivity.py  test_service.py  test_stress.py  test_thermostability.py  test_tracking.py  test_trs.py
touchstone/tests/fixtures/: boltzgen_nickel_design.cif  metalpdb_bvs_sites.json  metalpdb_real_sites.json  nickel_site_with_waters.cif
