[project]
name = "touchstone"
version = "0.0.1"
description = "Generator-agnostic geometry verifier for designed metal-binding proteins"
requires-python = ">=3.11"
dependencies = ["numpy>=1.26", "typer>=0.12", "rich>=13"]

[project.optional-dependencies]
dev = ["pytest>=8", "ase>=3.23"]
viz = ["wandb>=0.17", "python-dotenv>=1.0"]
# MLIP physics tier. mace and uma pin conflicting e3nn versions — install one,
# in its own environment; the tier is backbone-pluggable across both.
mace = ["ase>=3.23", "mace-torch>=0.3"]
uma = ["ase>=3.23", "fairchem-core>=2.0"]

[tool.uv]
# mace and uma pin incompatible e3nn versions — never resolve them together.
conflicts = [[{ extra = "mace" }, { extra = "uma" }]]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/touchstone"]

[tool.pytest.ini_options]
testpaths = ["tests"]
